; ModuleID = '/home/carl/AnghaBench/openssl/crypto/evp/extr_evp_lib.c_EVP_MD_CTX_set_pkey_ctx.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/evp/extr_evp_lib.c_EVP_MD_CTX_set_pkey_ctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32* }

@EVP_MD_CTX_FLAG_KEEP_PKEY_CTX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @EVP_MD_CTX_set_pkey_ctx(%struct.TYPE_6__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %6 = load i32, i32* @EVP_MD_CTX_FLAG_KEEP_PKEY_CTX, align 4
  %7 = call i32 @EVP_MD_CTX_test_flags(%struct.TYPE_6__* %5, i32 %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %14, label %9

9:                                                ; preds = %2
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = call i32 @EVP_PKEY_CTX_free(i32* %12)
  br label %14

14:                                               ; preds = %9, %2
  %15 = load i32*, i32** %4, align 8
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  store i32* %15, i32** %17, align 8
  %18 = load i32*, i32** %4, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %24

20:                                               ; preds = %14
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %22 = load i32, i32* @EVP_MD_CTX_FLAG_KEEP_PKEY_CTX, align 4
  %23 = call i32 @EVP_MD_CTX_set_flags(%struct.TYPE_6__* %21, i32 %22)
  br label %28

24:                                               ; preds = %14
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %26 = load i32, i32* @EVP_MD_CTX_FLAG_KEEP_PKEY_CTX, align 4
  %27 = call i32 @EVP_MD_CTX_clear_flags(%struct.TYPE_6__* %25, i32 %26)
  br label %28

28:                                               ; preds = %24, %20
  ret void
}

declare dso_local i32 @EVP_MD_CTX_test_flags(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @EVP_PKEY_CTX_free(i32*) #1

declare dso_local i32 @EVP_MD_CTX_set_flags(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @EVP_MD_CTX_clear_flags(%struct.TYPE_6__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
